bug fixed new scrollbar added

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #77B0AA #003C43;
 }
